fix nav spacing on home page
git-svn-id: https://svn.library.cornell.edu/etc3theme/trunk@9 41884976-462d-4036-b692-2b3efe40c1cd

--- a/stylesheets/etc/_navigation.scss
+++ b/stylesheets/etc/_navigation.scss
@@ -95,7 +95,7 @@
 @media (min-width: $screen-md) {
 	.front {
 		.navbar {
-			.nav { margin-top: 250px; }
+			.navbar-nav { margin-top: 250px; }
 		}
 	}
 	.navigation {
